got tests passing after restructuring project to be a package, moving files around, updating imports, and adding some new files. Also updated tests to reflect new structure.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,11 @@ version = "0.1.0"
 description = "Reusable medical image AI toolkit with regulatory-grade evidence and data contracts"
 requires-python = ">=3.10"
 
+dependencies = [
+    "numpy",
+    "torch",
+    "matplotlib",
+]
 [tool.setuptools]
 package-dir = {"" = "src"}
 
